- Fix for bug 531 : normalize the path (and use File.toURL() to make sure   the URL is valid).
git-svn-id: https://svn.apache.org/repos/asf/tomcat@285639 13f79535-47bb-0310-9956-ffa450edef68